--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,1 @@
-<!-- this is the contact page -->
+<!-- this is the contact page. I am doing some changes here so that i can check the functinality of the Git pull request -->
